# edzip

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: edzip.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  edzip.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: edzip.rst.txt  index.rst.txt  modules.rst.txt
edzip/: __init__.py  sqlite.py
tests/: test_edzip.py
