[tool.poetry]
name = "edzip"
version = "0.1.8"
description = "Library for utilising an external SQLite database as a zip file directory. Useful for random access into zips with extremely many files."
authors = ["Eetu Mäkelä <eetu.makela@iki.fi>"]
license = "MIT"
repository = "https://github.com/hsci-r/edzip"
keywords = [
    "zip-files"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
stream-unzip = "^0.0.88"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyperf = "^2.6.2"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
